[gd_scene load_steps=5 format=3 uid="uid://c0ovdowyxmv6f"]

[ext_resource type="Script" path="res://Scripts/WoodBarricade.gd" id="1_n4m27"]
[ext_resource type="Texture2D" uid="uid://dv6rkqf8gds6y" path="res://Textures/WoodBarricade.png" id="2_i28ph"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_a20gk"]
size = Vector2(16, 32)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8epb5"]
size = Vector2(32, 32)

[node name="WoodBarricade" type="Node2D"]
script = ExtResource("1_n4m27")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_i28ph")

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
shape = SubResource("RectangleShape2D_a20gk")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_8epb5")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.05

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
